# Language-Tools

./: .nvimrc  .pylintrc  .style.yapf  LICENSE  README.md  main.py  playground.py  setup.py
.ccls-cache/@@home@nuria@Workspace@git@compilers/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm@errno.h.blob  @usr@include@bits@byteswap.h.blob  @usr@include@bits@cpu-set.h.blob  @usr@include@bits@endian.h.blob  @usr@include@bits@errno.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@locale.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@pthreadtypes-arch.h.blob  @usr@include@bits@pthreadtypes.h.blob  @usr@include@bits@sched.h.blob  @usr@include@bits@select.h.blob  @usr@include@bits@setjmp.h.blob  @usr@include@bits@stdint-intn.h.blob  @usr@include@bits@stdint-uintn.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@stdlib-float.h.blob  @usr@include@bits@sys_errlist.h.blob  @usr@include@bits@thread-shared-types.h.blob  @usr@include@bits@time.h.blob  (+165 more)
ast/: ast.py
cpp/: CMakeLists.txt  main.cpp
cpp/src/: CMakeLists.txt
cpp/src/lexer/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  State.h  Token.cpp  Token.h
cpp/test/: CMakeLists.txt  NFATests.cpp
json/: json.py  tests.py
langtools_NuriAmari.egg-info/: PKG-INFO  SOURCES.txt
lexer/: basic_symbols.py  basic_tests.py  dfa.py  exceptions.py  lexer.py  nfa.py  state.py  token.py
parser/: basic_tests.py  cfg.py
readings/: basics_notes.md
(+78 files in other folders)
